Add favorites table component

--- a/src/styles.less
+++ b/src/styles.less
@@ -3,3 +3,22 @@
 	min-width: 400px;
 	max-width: 800px;
 }
+
+.favorites-table {
+	width: 100%;
+	border-collapse: collapse;
+	table-layout: fixed;
+
+	th,
+	td {
+		border: 1px solid #ccc;
+	}
+
+	th {
+		background-color: #eee;
+	}
+
+	td {
+		text-align: right;
+	}
+}
